[gd_scene load_steps=2 format=3 uid="uid://cxqvw9n0qzqa"]

[ext_resource type="Script" path="res://tests/basename_test.gd" id="1_basename"]

[node name="BaseNameTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_basename")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Base Name Resolution Test"
horizontal_alignment = 1

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter wallet address..."

[node name="ResolveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resolve Base Name"

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter address and click resolve"
horizontal_alignment = 1

[node name="AvatarDisplay" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 100)
expand_mode = 1
stretch_mode = 5